# whisper_real_time

./: README.md  original_installation.md  pyproject.toml
