[tool.poetry]
package-mode = false
name = "whisper-real-time"
version = "0.1.0"
description = ""
authors = ["Avi Bathula <avib-dev@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyaudio = "^0.2.14"
numpy = "^1.26.2"
speechrecognition = "^3.10.1"
openai-whisper = {git = "https://github.com/openai/whisper.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
